﻿Changelog
=========

4.8-dev - (unreleased)
----------------------

4.7 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* WIP: added eea:isTranslationOf to point to translations 
  [tiberich #5130]
* Bug fix: use dcterms:issued instead of dcterms:effective for DC
  [tiberich #5135]
* Feature: use a mechanism of subscribers to allow modification of the surf
  resource by package plugins 
  [tiberich #5129]
* Bug fix: fix @@rdf view for mimetypes_registry 
  [tiberich #5206]

4.6 - (2012-03-30)
------------------
* Empty release

4.5 - (2012-02-15)
------------------
* Bug fix: fixed tests 
  [tiberich]

4.4 - (2012-02-10)
------------------
* Bug fix: fixed a problem with related fields that are empty
  [tiberich #4942]

4.3 - (2012-02-02)
------------------
* Bug fix: fixed a problem inserting related items in rdf stream when relation field is single value
  [tiberich #4992]

4.2 - (2011-12-07)
------------------
* Bug fix: Unindex temporary objects created in portal_factory
  [voineali #4822]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Bug fix: use getFolderContents instead of objectValues() to retrieve
  children (v0.13 backport)
  [tiberich #4418]
* Bug fix: Fix tests for eea.rdfmarshaller
  [ichimdav #4340]
* Change: use dcterm namespace for metadata instead of dc
  [tiberich #4250]
* Cleaned: pyflakes warnings
  [ichimdav #4141]
* Cleaned: pylint violations
  [ichimdav #4140]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.0.4 compatible release
  [ghicaale #4258]

0.8 - (2011-02-09)
------------------
* Bug fix: skip fields for which the accessor cannot be determined
  [tiberich #3982]

0.7 - (2010-12-16)
------------------
* set surf logging level to CRITICAL to avoid all INFO messages
  [vincisas #3951]

0.6 - (2010-11-10)
------------------
* typo fix for tests
  [vincisas]

0.5 - (2010-09-30)
------------------