@@ -3,6 +3,8 @@
 
 4.8-dev - (unreleased)
 ----------------------
+* Bug fix: fixed hasTranslation recursive relation to itself.
+  [demarant refs #5130]
 
 4.7 - (2012-06-12)
 ------------------
